[tool.poetry]
name = "sdsstools"
version = "0.4.14"
description = "Small tools for SDSS products"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/sdsstools"
repository = "https://github.com/sdss/sdsstools"
keywords = ["astronomy", "software"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = ">=4.0"
pygments = "^2.5.2"
invoke = "^1.3.0"
semantic-version = "^2.8.4"  # For sdsstools.releases
docutils = "^0.16"
six = "^1.14.0"
packaging = ">=20.4"
importlib_metadata = {version="*",  python="<=3.7"}
daemonocle = "^1.0.2"

[tool.poetry.dev-dependencies]
ipython = "*"
flake8 = "*"
isort = "*"
ipdb = "*"
toml = ">=0.10.0"
pytest = ">=6.0.0"
pytest-sugar = ">=0.9.4"
pytest-cov = ">=2.10.0"
codecov = ">=2.1.8"
twine = ">=3.1.1"
wheel = ">=0.33.6"
click = ">=8.0.0"
pytest-click = "^0.3"
pytest-mock = "^3.2.0"
pytest-asyncio = "^0.14.0"
black = {version = "^20.8b1", allow-prereleases = true}

[tool.poetry.extras]

[tool.poetry.scripts]
sdss = 'sdsstools.cli:main'
daemonize = 'sdsstools.daemonizer:daemonize'

[tool.black]
line-length = 88
target-version = ['py38']
fast = true

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "TYPING", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "sdsstools"
known_typing = ["typing"]
lines_after_imports = 2
skip_glob = ["*/_vendor", "*/releases/*"]

[tool.pytest.ini_options]
# Disable warnings system because it interferes with the logger warning capture.
addopts = "--cov sdsstools --cov-report html --cov-report xml --cov-report term -p no:warnings"

[tool.coverage.run]
branch = true
include = ["*/src/sdsstools/*"]
omit = [
    "*/__main__.py",
    "*/__init__.py",
    "*/_vendor/*",
    "*/releases/*",
    "*/cli.py",
    "*/_tasks.py",
    "*/utils.py"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
