[project]
name = "sdsstools"
version = "1.9.6"
description = "Small tools for SDSS products"
authors = [
    { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" }
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
keywords = ["astronomy", "software"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8,<4"

dependencies = [
    "pyyaml>=4.0",
    "pygments>=2.5.2",
    "invoke>=2.0.0",
    "packaging>=20.4",
    "daemonocle>=1.0.2",
    "typing-extensions>=4.6.3",
    "rich>=13.4.2",
    "python-json-logger>=3.2.1",
    "numpy>=1.26.0,<3; python_version >= '3.10'",
    "numpy>=1.0.0,<2; python_version >= '3.8' and python_version < '3.10'"
]

[project.urls]
Homepage = "https://github.com/sdss/sdsstools"
Repository = "https://github.com/sdss/sdsstools"

[project.scripts]
sdss = 'sdsstools.cli:main'
daemonize = 'sdsstools.daemonizer:daemonize'

[dependency-groups]
dev = [
    "ipython>=8.14.0; python_version >= '3.9'",
    "ipython>=8.0.0,<8.14.0; python_version >= '3.8' and python_version < '3.9'",
    "doc8>=0.8.0",
    "ipdb>=0.13.3",
    "toml>=0.10.0",
    "pytest>=6.0.0",
    "pytest-sugar>=0.9.4",
    "pytest-cov>=2.10.0",
    "codecov>=2.1.8",
    "twine>=3.1.1",
    "wheel>=0.33.6",
    "click>=8.0.0",
    "pytest-click>=0.3",
    "pytest-mock>=3.2.0",
    "pytest-asyncio>=0.14.0",
    "ruff>=0.0.285"
]

[tool.ruff]
line-length = 88
target-version = 'py312'
exclude = ["**/_vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "NPY201"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["sdsstools"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]

[tool.pytest.ini_options]
# Disable warnings system because it interferes with the logger warning capture.
addopts = "--cov sdsstools --cov-report html --cov-report xml --cov-report term -p no:warnings"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
include = ["*/src/sdsstools/*"]
omit = [
    "*/__main__.py",
    "*/__init__.py",
    "*/_vendor/*",
    "*/cli.py",
    "*/_tasks.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/sdsstools"]

[tool.hatch.build.targets.wheel]
packages = ["src/sdsstools"]
